# agentplane-bitgn-adapter

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: cost.md  coverage.md  evidence-template.md  leaderboard.md  oauth.md  runbook.md  tasks.md  test-results.md  test-strategy.md
scripts/: bitgn_smoke.sh  check_oauth.sh
src/agentplane_bitgn_adapter/: __init__.py  agent.py  cli.py  codex_executor.py  json_extract.py  models.py  playbooks.py  prompt.py  proof.py  runtime.py
tests/: test_agent.py  test_codex_executor.py  test_json_extract.py  test_playbooks.py  test_prompt.py
